--- a/haproxy.toml
+++ b/haproxy.toml
@@ -2,7 +2,7 @@
 src = "haproxy.tmpl"
 dest = "/etc/haproxy/haproxy.cfg"
 #dest = "/tmp/haproxy.cfg"
-keys = [ "/services/demoapp-80" ]
+keys = [ "/services" ]
 owner = "root"
 mode = "0644"
 check_cmd = "/usr/sbin/haproxy -c -f {{.src}}"
