--- a/haproxy.toml
+++ b/haproxy.toml
@@ -6,4 +6,4 @@ keys = [ "/services" ]
 owner = "root"
 mode = "0644"
 check_cmd = "/usr/local/sbin/haproxy -c -f {{.src}}"
-reload_cmd = "/usr/sbin/service haproxy reload"
+reload_cmd = "/usr/local/sbin/haproxy -f {{.src}} -p $(</var/run/haproxy-private.pid) -st $(</var/run/haproxy-private.pid)"
