--- a/haproxy.toml
+++ b/haproxy.toml
@@ -3,5 +3,5 @@ src = "haproxy.tmpl"
 dest = "/usr/local/etc/haproxy/haproxy.cfg"
 keys = [ "/services" ]
 
-check_cmd = "/usr/local/sbin/haproxy -c -f /usr/local/etc/haproxy/haproxy.cfg"
+check_cmd = "/usr/local/sbin/haproxy -c -f {{.src}}"
 reload_cmd = "/usr/local/sbin/haproxy -f /usr/local/etc/haproxy/haproxy.cfg -p $(</var/run/haproxy.pid) -st $(</var/run/haproxy.pid)"
