--- a/haproxy.toml
+++ b/haproxy.toml
@@ -4,4 +4,4 @@ dest = "/usr/local/etc/haproxy/haproxy.cfg"
 keys = [ "/services" ]
 
 check_cmd = "/usr/local/sbin/haproxy -c -f {{.src}}"
-reload_cmd = "haproxy -D -f /usr/local/etc/haproxy/haproxy.cfg -p /var/run/haproxy.pid -sf $(cat /var/run/haproxy.pid)"
+reload_cmd = "/haproxyrestart"
